--- a/inspec.yaml.example
+++ b/inspec.yaml.example
@@ -1,5 +1,6 @@
 instances:
   - profile_path: /etc/sd-agent/inspec-profile
+    inspec_path: /opt/chef/embedded/bin/inspec
     attributes_file: /etc/sd-agent/plugins.conf.d/inspec_attrs.yml
     controls:
       - ssh
