Refactor inspec.py, move inspec_path to init_config, improve Readme
* Refactor inspec.py,
* move inspec_path to init_config,
* mprove Readme

fixes #5

--- a/inspec.yaml.example
+++ b/inspec.yaml.example
@@ -1,6 +1,9 @@
+init_config:
+  min_collection_interval: 60
+  inspec_path: /opt/chef/embedded/bin/inspec
+
 instances:
   - profile_path: /etc/sd-agent/inspec-profile
-    inspec_path: /opt/chef/embedded/bin/inspec
     attributes_file: /etc/sd-agent/plugins.conf.d/inspec_attrs.yml
     controls:
       - ssh
